# for-code-classification

./: .gitignore  FoR_code_classification-deberta.ipynb  README.md  pyproject.toml
distributions/: division_fractions_by_journal.csv
hierarchy/: FoR_code_hierarchical_4_digit.csv  FoR_code_hierarchical_6_digit.csv
output/: bart_tens_Title: {Publication Title}.csv  deberta_tens_Title: {Publication Title}.csv  tens_Title: {Publication Title}.csv
sample_data/: Pubs_FORs_Subset_10_with_title.csv  Pubs_FORs_Subset_10_with_title.xlsx  dev_sample.csv
src/: utils.py
